# RemoteJobManager

./: .buildinfo  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  api.html  command_line_interface.html  configuration.html  genindex.html  getting_started.html  getting_started_manual.html  getting_started_nesi.html  index.html  installation.html  objects.inv  one_time_setup.html  py-modindex.html  pyproject.toml  rjm_config.ini.example  search.html  searchindex.js  setup.cfg  setup.py  troubleshooting_on_nesi.html  using_rjm.html
.doctrees/: api.doctree  command_line_interface.doctree  configuration.doctree  environment.pickle  getting_started_manual.doctree  getting_started_nesi.doctree  index.doctree  installation.doctree  one_time_setup.doctree  troubleshooting_on_nesi.doctree  using_rjm.doctree
.github/workflows/: build.yml  github-pages.yml
_sources/: api.rst.txt  command_line_interface.rst.txt  configuration.rst.txt  getting_started_nesi.rst.txt  index.rst.txt  installation.rst.txt  one_time_setup.rst.txt  troubleshooting_on_nesi.rst.txt  using_rjm.rst.txt
_static/: documentation_options.js
docs/: command_line_interface.rst  conf.py  configuration.rst  getting_started.rst  getting_started_manual.rst  getting_started_nesi.rst  index.rst  installation.rst  one_time_setup.rst  troubleshooting_on_nesi.rst
examples/longrunning/: cleanup.sh  dirlist.txt  run.sh
examples/many/: cleanup.sh  dirlist.txt  run.sh
examples/namd/: .gitignore  README.md  cleanup.sh  dirlist.txt  dirlist1.txt  dirlist2.txt  test.sh
examples/nodeps/: .gitignore  cleanup.sh  run.sh  run1.sh  run3.sh
examples/nonmem-timeout/: run.sh  (+2 more)
rjm/: __init__.py  auth.py  cli.py  config.py  errors.py  funcx_slurm_runner.py  globus_https_transferer.py  remote_job.py  remote_job_batch.py  remote_job_manager.py  runner_base.py  transferer_base.py  utils.py
scripts/: rjm_batch_submit.py  rjm_batch_wait.py
(+122 files in other folders)
